--- a/.github/workflows/python-GLaDOS_checkin.yml
+++ b/.github/workflows/python-GLaDOS_checkin.yml
@@ -5,7 +5,7 @@ name: GLaDOS checkin
 
 on:
   schedule:
-    - cron: '*/60*24 * * * *'
+    - cron: '*/1440 * * * *'
 
 permissions:
   contents: read
